trying to fix mobile content jumping

--- a/_sass/pages/_layout.scss
+++ b/_sass/pages/_layout.scss
@@ -88,8 +88,8 @@
 }
 
 .nav-list {
-  margin: 0;
-  padding: 0;
+  /*margin: 0;
+  padding: 0;*/
   list-style: none;
 
   .nav-item {
